--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -2,3 +2,44 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+$primary: #a8f7fd;
+$primary-font: #f2f4f4;
+$cinder: #242b30;
+$dark-jungle-green: #1c2024;
+
+$font-baskerville: 'Libre Baskerville', serif;
+$font-space-grotesk: 'Space Grotesk', sans-serif;
+
+$container-max-widths: (
+  "md": 1312px,
+  "lg": 1312px,
+  "xl": 1312px,
+);
+
+$headings: (
+  "h3": (
+    "size": 18px,
+    "weight": 700,
+    "line-height": 28px,
+    "letter-spacing": 0.04em,
+    "font-family": $font-baskerville,
+    "text-transform": false,
+  ),
+  "body": (
+    "size": 14px,
+    "weight": 200,
+    "line-height": 24px,
+    "letter-spacing": 0.04em,
+    "font-family": $font-space-grotesk,
+    "text-transform": false,
+  ),
+  "caption": (
+    "size": 12px,
+    "weight": 400,
+    "line-height": 16px,
+    "letter-spacing": 0.08em,
+    "font-family": $font-baskerville,
+    "text-transform": false,
+  )
+)
