--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,9 +1,9 @@
 .v-application {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.02em;
-  color: $primary-font !important;
-  background: $cinder !important;
+  line-height: 28px;
+  letter-spacing: 0.06em;
+  color: #F4F3EC !important;
+  background: $primary-black !important;
   font-family: $font-space-grotesk;
 }
