--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -3,11 +3,12 @@
 // The variables you want to modify
 // $font-size-root: 20px;
 
-$primary: #a8f7fd;
-$primary-font: #f2f4f4;
-$cinder: #242b30;
-$dark-jungle-green: #1c2024;
-
+$primary: #e0fdcd;
+$primary-font-light: #F4F3EC;
+$primary-font-dark: #0e0e10;
+$primary-black: #1C1D21;
+$secondary-black: #17171a;
+$deep-black: #141414;
 $font-baskerville: 'Libre Baskerville', serif;
 $font-space-grotesk: 'Space Grotesk', sans-serif;
 
@@ -18,6 +19,22 @@ $container-max-widths: (
 );
 
 $headings: (
+  "h1": (
+    "size": 96px,
+    "weight": 900,
+    "line-height": 108px,
+    "letter-spacing": 0.02em,
+    "font-family": $font-space-grotesk,
+    "text-transform": false,
+  ),
+  "h2": (
+    "size": 72px,
+    "weight": 700,
+    "line-height": 86px,
+    "letter-spacing": 0.04em,
+    "font-family": $font-space-grotesk,
+    "text-transform": false,
+  ),
   "h3": (
     "size": 18px,
     "weight": 700,
@@ -27,8 +44,16 @@ $headings: (
     "text-transform": false,
   ),
   "body": (
+    "size": 18px,
+    "weight": 400,
+    "line-height": 28px,
+    "letter-spacing": 0.06em,
+    "font-family": $font-space-grotesk,
+    "text-transform": false,
+  ),
+  "alt": (
     "size": 14px,
-    "weight": 200,
+    "weight": 300,
     "line-height": 24px,
     "letter-spacing": 0.04em,
     "font-family": $font-space-grotesk,
