Add new content

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -9,6 +9,7 @@ $primary-font-dark: #0e0e10;
 $primary-black: #1C1D21;
 $secondary-black: #17171a;
 $deep-black: #141414;
+$light-red: #f16f6f;
 $font-baskerville: 'Libre Baskerville', serif;
 $font-space-grotesk: 'Space Grotesk', sans-serif;
 
