--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -7,6 +7,14 @@
 
 @font-face {
   font-family: 'Libre Baskerville';
+  src: url("../fonts/LibreBaskerville/LibreBaskerville-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+@font-face {
+  font-family: 'Libre Baskerville';
   src: url("../fonts/LibreBaskerville/LibreBaskerville-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
